--- a/pacman.conf
+++ b/pacman.conf
@@ -89,3 +89,7 @@ Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
+
+[cosmic]
+SigLevel = Never
+Server = https://github.com/antman666/cosmic-repo/releases/download/$arch
